--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,63 @@ header nav ul{
     width: 100%;
 }
 
+/*Dette er grid på index-siden*/
+
+#grid-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, auto);
+    grid-template-areas: "topp" "hoveromrader" "bunn";
+}
+
+header{
+    grid-area: topp;
+}
+
+main{
+    grid-area: hovedomrade;
+}
+
+footer{
+    grid-area: bunn;
+}
+
+/*Dette er media queries for desktop*/
+
+@media only screen and (min-width: 850px) {
+    
+    #grid-container{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    header{
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+    
+
+    main{
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start: 2;
+        grid-row-end: 4;
+    }
+    
+    main h1{
+        text-align: center;
+    }
+
+    footer{
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start: 4;
+        grid-row-end: 5;
+    }
+
+
+
+}
+
+
