--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,18 @@ h1{
     font-size: 20px;
 }
 
+.produkth1{
+    letter-spacing: 3px;
+    font-size: 20px;
+    
+}
+
+.logginnh1{
+    letter-spacing: 3px;
+    font-size: 20px;
+}
+
+
 .pynt{
     background-color: #e8dcb5; 
     height: 420px;
@@ -59,11 +71,6 @@ h1{
     padding-bottom: 10px;  
 }
 
-.pynt h3{
-    justify-content: space-between;
-    margin-top: 120px;
-    text-align: center;
-}
 
 a{
     text-decoration: none;
@@ -185,6 +192,12 @@ footer{
         justify-content: space-around;
     }
 
+    .default-flex3 article{
+        flex-basis: 33%;
+        min-width: 600px;
+        justify-content: center;
+        text-align: center;
+    }
     .sokefelt{
         display: flex;
 
