--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,13 @@ h1{
     font-size: 20px;
 }
 
+main section article form {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+}
+
+
 .produkth1{
     letter-spacing: 3px;
     font-size: 20px;
@@ -83,7 +90,6 @@ a{
 footer nav ul li{
     list-style: none;
     display: flex;
-    align-contet: baseline;
 }
 
 .footer{
@@ -97,13 +103,33 @@ footer nav ul li{
     padding: 0;
 }
 
+.fa-house{
+    margin-right: 20px;
+}
+.fa-circle-info{
+    margin-left: 20px;
+}
+.fa-location-dot{
+    margin-left: 20px;
+}
 /*Dette er for logg-innskjema*/
 
 .logginn1{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 0.5rem;
     text-align: center;
     border-radius: 5px;
 }
 
+.epost{
+    margin-left: 50px;
+}
+
+.passord{
+    margin-left: 50px;
+}
 
 /*Dette er for Glemt passord*/
 .logginn2{
@@ -112,6 +138,8 @@ footer nav ul li{
     background-color: #a67a5b;
     color: #f6efeb;
     border-radius: 5px;
+    width: 300px;
+    height: 100px;
 }
 
 /*Dette er for ny bruker*/
@@ -121,6 +149,8 @@ footer nav ul li{
     background-color: #a67a5b;
     color: #f6efeb;
     border-radius: 5px;
+    width: 300px;
+    height: 100px;
 }
 
 .default-flex{
@@ -213,6 +243,11 @@ footer{
         grid-row-end: 4;
     }
 
+    .logginnh1{
+        font-size: 40px;
+    }
+
+
     .logginn2{
         padding-bottom: 10px;
     }
@@ -255,6 +290,14 @@ footer{
     #logo{
         letter-spacing: 5px;
         margin-left: 60px;    
+    }
+
+    .forsideh1{
+        font-size: 30px;
+    }
+
+    .produkth1{
+        font-size: 30px;
     }
 
     .nyheter{
