--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ footer nav ul li{
     border-radius: 5px;
     width: 300px;
     height: 100px;
+    padding: 5px;
 }
 
 /*Dette er for ny bruker*/
@@ -153,6 +154,7 @@ footer nav ul li{
     border-radius: 5px;
     width: 300px;
     height: 100px;
+    padding: 5px;
 }
 
 .default-flex{
