--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@ header nav ul{
     padding-left: 5px;
 }
 
+.header2{
+    display: none;
+}
+
 .sokefelt{
     align-items: center;
     margin-left: 76px;
@@ -129,7 +133,7 @@ footer nav ul li{
     margin-left: 40px;
 }
 
-.passord{
+.password{
     margin-left: 40px;
 }
 
@@ -251,9 +255,9 @@ footer{
         font-size: 40px;
     }
 
-
     .logginn2{
         padding-bottom: 10px;
+        
     }
 
     .logginn3{
@@ -279,6 +283,7 @@ footer{
         justify-content: center;
         text-align: center;
         margin: auto;
+        margin-top: 20px;
     }
 
     footer nav ul li{
@@ -316,7 +321,7 @@ footer{
         width: 396px;
         background-color: #e8dcb5;
     }
-
+ 
 }
 
 
