Endret font-size
Endret font-size på ikoner i media queries.

--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,12 @@ footer{
         grid-row-end: 4;
     }
 
+    header nav ul{
+        font-size: 25px;
+    }
+
+
+
     .logginnh1{
         font-size: 40px;
     }
